--- a/app/views/cart_items/edit.html.erb
+++ b/app/views/cart_items/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-3">
-  <% @cart=Cart.find(params[:id]) %>
+  <% @cart=@current_cart.first %>
   <% @cart_items=@cart.cart_items %>
   <p class="Back-Button"><%= link_to "Go Back Shopping", menu_categories_path %> </p>
   <div >
